--- a/MyBlokus/MyBlokus.vcxproj
+++ b/MyBlokus/MyBlokus.vcxproj
@@ -130,6 +130,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="functions.h" />
     <ClCompile Include="MyBlokus.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
