--- a/MyBlokus/MyBlokus.vcxproj.filters
+++ b/MyBlokus/MyBlokus.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="MyBlokus.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="functions.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="functions.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
